--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #
 spring.datasource.url = jdbc:mysql://localhost:3306/sys?useSSl=false&serverTimezone=UTC
 spring.datasource.username= root
-spring.datasource.password= Oussama2
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
